[package]
name = "cargo-index-cli"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "CLI to generate a ZSpell index"
repository = "https://github.com/pluots/zspell-index"
publish = false

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ureq = { version = "2.9.1", features = ["json"] }
uuid = { version = "1.6.1", features = ["serde", "v7"] }
zspell-index = { path = "../zspell-index", version = "0.2" }
